--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ readme = "README.md"
 license = {file = "LICENSE"}
 requires-python = ">=3.9"
 dependencies = [
-    "utils @ git+https://github.com/lkesich/utilities.git@main#subdirectory=src",
+    "utils @ git+https://github.com/lkesich/utilities.git@main",
     "pandas >= 2.0"
 ]
 classifiers = [
